# teloxide

crates/teloxide/: Cargo.toml
crates/teloxide-core/: Cargo.toml
